# portal-background-test-libportal

./: LICENSE  README.md  io.github.justinrdonnelly.portalbackgroundtestlibportal.json  meson.build
data/: io.github.justinrdonnelly.portalbackgroundtestlibportal.desktop.in  io.github.justinrdonnelly.portalbackgroundtestlibportal.gschema.xml  io.github.justinrdonnelly.portalbackgroundtestlibportal.metainfo.xml.in  io.github.justinrdonnelly.portalbackgroundtestlibportal.service.in  meson.build
data/icons/: meson.build
po/: POTFILES.in  meson.build
src/: main.c  meson.build  portal-background-test-libportal-application.c  portal-background-test-libportal-application.h  portal-background-test-libportal-window.c  portal-background-test-libportal-window.h  portal-background-test-libportal-window.ui  portal-background-test-libportal.gresource.xml
